# src/main/java/com/custom/boot3Cms/application/mng/bbs/control/BbsMngController.java
@@ -1,5 +1,6 @@
 package com.custom.boot3Cms.application.mng.bbs.control;
 
+import com.custom.boot3Cms.application.common.result.vo.ResultVO;
 import com.custom.boot3Cms.application.common.system.login.vo.LoginVO;
 import com.custom.boot3Cms.application.common.utils.CommonUtil;
 import com.custom.boot3Cms.application.common.utils.StringUtil;
@@ -8,6 +9,7 @@ import com.custom.boot3Cms.application.mng.bbs.vo.BbsMngVO;
 import com.custom.boot3Cms.application.mng.code.service.CodeMngService;
 import com.custom.boot3Cms.application.mng.code.vo.CodeMngVO;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.springframework.ui.Model;
 import org.springframework.ui.ModelMap;
 import org.springframework.web.bind.annotation.*;
@@ -35,6 +37,7 @@ import java.util.Map;
  *
  * </pre>
  * @since 2024-05-12 */
+@Tag(name = "게시판 관리 컨트롤러")
 @RestController
 public class BbsMngController {
 
@@ -56,15 +59,32 @@ public class BbsMngController {
      * @throws Exception
      */
     @Operation(summary = "게시판 리스트")
-    @GetMapping("/mng/bbs/list")
-    public String bbsList(@RequestBody BbsMngVO bbsMngVO
-            , Model model
+    @GetMapping("/api/mng/bbs/list")
+    public ResultVO bbsList(@ModelAttribute BbsMngVO bbsMngVO
             , HttpServletRequest request
             , HttpServletResponse response
-            , RedirectAttributes redirectAttributes
     ) throws Exception {
-        model.addAttribute("list", bbsMngService.getBbsList(bbsMngVO));
-        return "mng/bbs/list";
+
+        ResultVO resultVO = new ResultVO();
+        boolean result = false;
+        int code = 200;
+        String rMsg = "";
+
+        try{
+            resultVO.putResult("total_cnt", bbsMngService.getBbsListCNT(bbsMngVO));
+            resultVO.putResult("list", bbsMngService.getBbsList(bbsMngVO));
+            result = true;
+        }catch (Exception e){
+            e.printStackTrace();
+            result = false;
+            code = 404;
+            rMsg = "게시판 목록 조회 중 오류가 발생하였습니다.";
+        }
+
+        resultVO.setResultMsg(rMsg);
+        resultVO.putResult("result",result);
+        resultVO.setResultCode(code);
+        return resultVO;
     }
 
     /**
@@ -77,57 +97,89 @@ public class BbsMngController {
      * @throws Exception
      */
     @Operation(summary = "게시판 코드 중복검사")
-    @PostMapping("/mng/bbs/code/check")
-    public boolean checkBbsCode(@RequestBody BbsMngVO bbsMngVO
-            , Model model
+    @PostMapping("/api/mng/bbs/code/check")
+    public ResultVO checkBbsCode(@RequestBody BbsMngVO bbsMngVO
             , HttpServletRequest request
             , HttpServletResponse response
             , RedirectAttributes redirectAttributes
     ) throws Exception {
-        return bbsMngService.checkBbsCode(bbsMngVO);
+
+        ResultVO resultVO = new ResultVO();
+        boolean result = false;
+        int code = 200;
+        String rMsg = "";
+
+        try{
+            resultVO.putResult("data", bbsMngService.checkBbsCode(bbsMngVO));
+            result = true;
+        }catch (Exception e){
+            e.printStackTrace();
+            result = false;
+            code = 404;
+            rMsg = "게시판 코드 중복검사 중 오류가 발생하였습니다.";
+        }
+
+        resultVO.setResultMsg(rMsg);
+        resultVO.putResult("result",result);
+        resultVO.setResultCode(code);
+        return resultVO;
     }
 
     /**
      * 게시판 정보
      *
-     * @param bbsMngVO
      * @param request
      * @param response
      * @return
      * @throws Exception
      */
     @Operation(summary = "게시판 상세정보")
-    @GetMapping("/mng/bbs/info")
-    public String bbsForm(@RequestBody BbsMngVO bbsMngVO
-            , Model model
+    @GetMapping("/api/mng/bbs/info")
+    public ResultVO bbsForm(@RequestParam String bbs_info_seq
             , HttpServletRequest request
             , HttpServletResponse response
             , RedirectAttributes redirectAttributes
     ) throws Exception {
-        if(StringUtil.isNotEmpty(bbsMngVO.getBbs_info_seq())){
-            Map<String, Object> map = bbsMngService.getBbsDetail(new BbsMngVO(bbsMngVO.getBbs_info_seq()));
-            if((boolean)map.get("result")){
-                BbsMngVO vo = (BbsMngVO) map.get("value");
-                if(vo != null){
-                    model.addAttribute("bbsMngVO", vo);
-                    model.addAttribute("authList", bbsMngService.getBbsAuth(vo));
-                    if("Y".equals(vo.getCategory_use_yn())){
-                        model.addAttribute("categoryList", bbsMngService.getBbsCategory(vo));
+        ResultVO resultVO = new ResultVO();
+        boolean result = false;
+        int code = 200;
+        String rMsg = "";
+
+        try{
+            if(StringUtil.isNotEmpty(bbs_info_seq)){
+                Map<String, Object> map = bbsMngService.getBbsDetail(new BbsMngVO(bbs_info_seq));
+                if((boolean)map.get("result")){
+                    BbsMngVO vo = (BbsMngVO) map.get("value");
+                    if(vo != null){
+                        resultVO.putResult("data", vo);
+                        resultVO.putResult("authList", bbsMngService.getBbsAuth(vo));
+                        if("Y".equals(vo.getCategory_use_yn())){
+                            resultVO.putResult("categoryList", bbsMngService.getBbsCategory(vo));
+                        }
+                        if("Y".equals(vo.getAttach_file_use_yn())){
+                            resultVO.putResult("attachFileList", bbsMngService.getBbsFileInfo(vo));
+                        }
                     }
-                    if("Y".equals(vo.getAttach_file_use_yn())){
-                        model.addAttribute("attachFileList", bbsMngService.getBbsFileInfo(vo));
-                    }
+                }else{
+                    code = 404;
+                    rMsg = String.valueOf(map.get("rMsg"));
                 }
-            }else{
-                redirectAttributes.addFlashAttribute("rHeader",map.get("rHeader"));
-                redirectAttributes.addFlashAttribute("rMsg",map.get("rMsg"));
-                return "redirect:/mng/bbs/list";
             }
+            CodeMngVO userAuthConfVO = new CodeMngVO();
+            userAuthConfVO.setCode("user_auth");
+            resultVO.putResult("user_auth", codeService.getCodeToAuthConf(userAuthConfVO));
+            result = true;
+        }catch (Exception e){
+            e.printStackTrace();
+            result = false;
+            code = 404;
+            rMsg = "게시판 상세정보 조회 중 오류가 발생하였습니다.";
         }
-        CodeMngVO userAuthConfVO = new CodeMngVO();
-        userAuthConfVO.setCode("user_auth");
-        model.addAttribute("user_auth", codeService.getCodeToAuthConf(userAuthConfVO));
-        return "mng/bbs/form";
+
+        resultVO.setResultMsg(rMsg);
+        resultVO.putResult("result",result);
+        resultVO.setResultCode(code);
+        return resultVO;
     }
 
     /**
@@ -135,37 +187,46 @@ public class BbsMngController {
      * @param bbsMngVO
      * @param request
      * @param response
-     * @param model
-     * @param session
-     * @param redirectAttributes
      * @param principal
      * @return
      * @throws Exception
      */
     @Operation(summary = "게시판 등록")
-    @PostMapping(value = "/mng/bbs/proc")
-    public String createBbs(@RequestBody BbsMngVO bbsMngVO,
+    @PostMapping(value = "/api/mng/bbs/proc")
+    public ResultVO createBbs(@RequestBody BbsMngVO bbsMngVO,
                           HttpServletRequest request,
                           HttpServletResponse response,
-                          ModelMap model,
-                          HttpSession session,
-                          RedirectAttributes redirectAttributes,
                           Principal principal) throws Exception {
-        if(principal != null){
-            LoginVO vo = CommonUtil.fn_getUserAuth(principal);
-            bbsMngVO.setInpt_seq(vo.getUser_seq());
-            bbsMngVO.setUpd_seq(vo.getUser_seq());
+        ResultVO resultVO = new ResultVO();
+        boolean result = false;
+        int code = 200;
+        String rMsg = "";
+
+        try{
+            if(principal != null){
+                LoginVO vo = CommonUtil.fn_getUserAuth(principal);
+                bbsMngVO.setInpt_seq(vo.getUser_seq());
+                bbsMngVO.setUpd_seq(vo.getUser_seq());
+            }
+            Map<String, Object>  map = bbsMngService.setBbs(bbsMngVO);
+            if((boolean)map.get("result")){
+                resultVO.putResult("data",bbsMngVO);
+                result = true;
+            }else{
+                code = 404;
+                rMsg = String.valueOf(map.get("rMsg"));
+            }
+        }catch (Exception e){
+            e.printStackTrace();
+            result = false;
+            code = 404;
+            rMsg = "게시판 등록 중 오류가 발생하였습니다.";
         }
-        Map<String, Object>  map = bbsMngService.setBbs(bbsMngVO);
-        
-        String rtnUrl = "";
-        if((boolean)map.get("result")){
-            
-        }else{
-            
-        }
-        
-        return "";
+
+        resultVO.setResultMsg(rMsg);
+        resultVO.putResult("result",result);
+        resultVO.setResultCode(code);
+        return resultVO;
     }
 
     /**
@@ -173,37 +234,46 @@ public class BbsMngController {
      * @param bbsMngVO
      * @param request
      * @param response
-     * @param model
-     * @param session
-     * @param redirectAttributes
      * @param principal
      * @return
      * @throws Exception
      */
     @Operation(summary = "게시판 수정")
-    @PutMapping(value = "/mng/bbs/proc")
-    public String updateBbs(@RequestBody BbsMngVO bbsMngVO,
+    @PutMapping(value = "/api/mng/bbs/proc")
+    public ResultVO updateBbs(@RequestBody BbsMngVO bbsMngVO,
                             HttpServletRequest request,
                             HttpServletResponse response,
-                            ModelMap model,
-                            HttpSession session,
-                            RedirectAttributes redirectAttributes,
                             Principal principal) throws Exception {
-        if(principal != null){
-            LoginVO vo = CommonUtil.fn_getUserAuth(principal);
-            bbsMngVO.setInpt_seq(vo.getUser_seq());
-            bbsMngVO.setUpd_seq(vo.getUser_seq());
+        ResultVO resultVO = new ResultVO();
+        boolean result = false;
+        int code = 200;
+        String rMsg = "";
+
+        try{
+            if(principal != null){
+                LoginVO vo = CommonUtil.fn_getUserAuth(principal);
+                bbsMngVO.setInpt_seq(vo.getUser_seq());
+                bbsMngVO.setUpd_seq(vo.getUser_seq());
+            }
+            bbsMngVO.setFlag("u");
+            Map<String, Object> map = bbsMngService.updBbs(bbsMngVO);
+            if((boolean)map.get("result")){
+                result = true;
+            }else{
+                code = 404;
+                rMsg = String.valueOf(map.get("rMsg"));
+            }
+        }catch (Exception e){
+            e.printStackTrace();
+            result = false;
+            code = 404;
+            rMsg = "게시판 수정 중 오류가 발생하였습니다.";
         }
-        Map<String, Object>  map = bbsMngService.updateBbs(bbsMngVO);
 
-        String rtnUrl = "";
-        if((boolean)map.get("result")){
-
-        }else{
-
-        }
-
-        return "";
+        resultVO.setResultMsg(rMsg);
+        resultVO.putResult("result",result);
+        resultVO.setResultCode(code);
+        return resultVO;
     }
 
     /**
@@ -211,62 +281,84 @@ public class BbsMngController {
      * @param bbsMngVO
      * @param request
      * @param response
-     * @param model
-     * @param session
-     * @param redirectAttributes
      * @param principal
      * @return
      * @throws Exception
      */
     @Operation(summary = "게시판 삭제")
-    @DeleteMapping(value = "/mng/bbs/proc")
-    public String deleteBbs(@RequestBody BbsMngVO bbsMngVO,
+    @DeleteMapping(value = "/api/mng/bbs/proc")
+    public ResultVO deleteBbs(@RequestBody BbsMngVO bbsMngVO,
                             HttpServletRequest request,
                             HttpServletResponse response,
-                            ModelMap model,
-                            HttpSession session,
-                            RedirectAttributes redirectAttributes,
                             Principal principal) throws Exception {
-        if(principal != null){
-            LoginVO vo = CommonUtil.fn_getUserAuth(principal);
-            bbsMngVO.setInpt_seq(vo.getUser_seq());
-            bbsMngVO.setUpd_seq(vo.getUser_seq());
+        ResultVO resultVO = new ResultVO();
+        boolean result = false;
+        int code = 200;
+        String rMsg = "";
+
+        try{
+            if(principal != null){
+                LoginVO vo = CommonUtil.fn_getUserAuth(principal);
+                bbsMngVO.setInpt_seq(vo.getUser_seq());
+                bbsMngVO.setUpd_seq(vo.getUser_seq());
+            }
+            bbsMngVO.setFlag("d");
+            Map<String, Object> map = bbsMngService.updBbs(bbsMngVO);
+            if((boolean)map.get("result")){
+                result = true;
+            }else{
+                code = 404;
+                rMsg = String.valueOf(map.get("rMsg"));
+            }
+        }catch (Exception e){
+            e.printStackTrace();
+            result = false;
+            code = 404;
+            rMsg = "게시판 삭제 중 오류가 발생하였습니다.";
         }
-        Map<String, Object>  map = bbsMngService.deleteBbs(bbsMngVO);
 
-        String rtnUrl = "";
-        if((boolean)map.get("result")){
-
-        }else{
-
-        }
-
-        return "";
+        resultVO.setResultMsg(rMsg);
+        resultVO.putResult("result",result);
+        resultVO.setResultCode(code);
+        return resultVO;
     }
 
     /**
      * BBS_INFO_SEQ로 게시판 존재여부 확인
      * @param bbs_seq
-     * @param model
      * @param request
      * @param response
-     * @param redirectAttributes
      * @param principal
      * @return
      * @throws Exception
      */
     @Operation(summary = "게시판 존재여부 확인")
-    @GetMapping("/mng/{bbs_seq}/config/bbs/cnt")
-    public String menuLinkList(@PathVariable("bbs_seq") String bbs_seq
-            , Model model
+    @GetMapping("/api/mng/{bbs_seq}/bbs/cnt")
+    public ResultVO menuLinkList(@PathVariable("bbs_seq") String bbs_seq
             , HttpServletRequest request
             , HttpServletResponse response
-            , RedirectAttributes redirectAttributes
             , Principal principal) throws Exception{
-        BbsMngVO vo = new BbsMngVO();
-        vo.setBbs_info_seq(bbs_seq);
-        return bbsMngService.getBbsCnt(vo);
-    }
+        ResultVO resultVO = new ResultVO();
+        boolean result = false;
+        int code = 200;
+        String rMsg = "";
 
+        try{
+            BbsMngVO vo = new BbsMngVO();
+            vo.setBbs_info_seq(bbs_seq);
+            resultVO.putResult("data",bbsMngService.getBbsCnt(vo));
+            result = true;
+        }catch (Exception e){
+            e.printStackTrace();
+            result = false;
+            code = 404;
+            rMsg = "게시판 존재여부 확인 중 오류가 발생하였습니다.";
+        }
+
+        resultVO.setResultMsg(rMsg);
+        resultVO.putResult("result",result);
+        resultVO.setResultCode(code);
+        return resultVO;
+    }
 }
 
